# pp2lp

./: .gitignore  CLAUDE.md  HANDOFF.md  INFO.md  Makefile  Prelude.lp  Syntax.lp  Traces.lp  lambdapi.pkg  notes.md  pp.lp  pp2lp  traces.lp
.claude/: settings.json
.claude/hooks/: post-edit.sh
admin/: meeting-24-06-2025.md
atelierb/files/: README.md  traces.txt
atelierb/tools/: README.md
bench/: _krt.py  check.py  format_error.py  format_lambdapi_json.py  fuzz_goals.py  gen_replays.py  gen_traces.py  goals.txt  rule_coverage.sh  test_cli.py
bench/claude-arith/: ar1_refl_disc.but  ar1_refl_disc.replay  ar1_refl_disc.trace  ar2_double_neg_refl.but  ar2_double_neg_refl.replay  ar2_double_neg_refl.trace  ar2_neg_refl.but  ar2_neg_refl.replay  ar2_neg_refl.trace  ar3_em.but  ar3_em.replay  ar3_em.trace  ar4_chain.but  ar4_chain.replay  ar4_chain.trace  ar4_pred_below.but  ar4_pred_below.replay  ar4_pred_below.trace  ar4_succ_above.but  ar4_succ_above.replay  ar4_succ_above.trace  ar5_neg_antisym_zero.but  ar5_neg_antisym_zero.replay  ar5_neg_antisym_zero.trace  ar6_neg_antisym_zero.but  ar6_neg_antisym_zero.replay  ar6_neg_antisym_zero.trace  ar8_leq_antisym.but  ar8_leq_antisym.replay  (+22 more)
data/: rules.json
doc/: architecture.md  b-book-deps.md  b-book-ref.md  intro.md  lambdapi-json-request.md  lambdapi-reference.md  pp_rules.md  references.bib  rules.md  spec_pp.md
lp/: Arith.lp  Ax.lp  Axm.lp  B.lp  Bool.lp  Conj.lp  ConjList.lp  Disj.lp  Eq.lp  EqRules.lp  EqSound.lp  Equiv.lp  Experiment2.lp  Impl.lp  Int.lp  Interp.lp  Neg.lp  NonFree.lp  Nrm.lp  PP.lp  Prelude.lp  Proof.lp  Quant.lp  Rules.lp  Subst.lp  Syntax.lp  Tactic.lp  Test.lp  Testing.lp  Traces.lp  Typecheck.lp  Unif.lp  exploit.lp  nrm8_probe.lp  nrm_test.lp
lp-old/: B.lp  Eq.lp  Interp.lp  NonFree.lp  Proof.lp  Rules.lp  Subst.lp  Test.lp  TestRetirer.lp  Traces.lp
ocaml/: .ocamlinit  .utop-init.ml  dune  dune-project
ocaml/src/: PP_Syntax.ml  arith_proofs.ml  arith_proofs.mli  batch.ml  cache.ml  check.ml  core_check.ml  core_check.mli  coverage.ml  dune  emit_ctx.ml  emit_ctx.mli  emit_lp.ml  emit_lp.mli  emit_pp.ml  emit_pp.mli  errors.ml  errors.mli  free_vars.ml  free_vars.mli  gen_but.ml  hyp_ctx.ml  ins.ml  json_out.ml  lexer.mll  lp_diag.ml  lp_tools.ml  lp_tree.ml  lp_tree.mli  parse_pp.ml  parse_replay.ml  parse_replay.mli  parse_trace.ml  parser.mly  pp_lp.ml  pp_lp.mli  proof_tree.ml  proof_tree.mli  proof_tree_cmd.ml  reconstruct.ml  (+15 more)
ocaml/test/: 01.expected.lp  03.expected.lp  04.expected.lp  18.expected.lp  21.expected.lp  26.expected.lp  dune  test_cache.ml  test_lp_tools.ml  test_pp2lp.ml
rules/: ALL.lp  AND.lp  AR.lp  AXM.lp  BOOL.lp  EQV.lp  IMP.lp  INS.lp  NOT.lp  NRM.lp  OR.lp  STOP.lp  VRFX.lp  XST.lp
test/: RSRM.pmm  format_error.py  gen_traces.py
tex/: CLAUDE.md  afadl.tex  pp2lp-note.tex
traces/: 03.trace.replay  04.trace  04.trace.replay  06.trace.replay  08.trace  08.trace.replay  11.trace.replay  13.trace  16.trace  17.trace.replay  18.trace.replay  19.trace.replay  21.trace  21.trace.replay  25.trace  25.trace.replay  27.trace  29.trace.replay  REPLAY.kin  all_replays.txt  all_traces.txt  gen_goals.py  gen_replays.py
(+3204 files in other folders)
