; Warnings.  Partial-match (8) is FATAL: the rule-dispatch match in
; Translate must stay exhaustive — a missing case is exactly the bug
; class the typed `Rule_db.emit` variant was introduced to prevent (a
; dangling `dynamic:ar4` tag silently took a wrong default).  Unused-var
; (26) stays a visible-but-non-fatal warning so iteration isn't blocked.
; (The former blanket `-w -8-26` suppression hid both.)
(env
 (_ (flags (:standard -w +8+26 -warn-error +8))))
