(ocamllex lexer)
(menhir
 (modules parser)
)

(library
 (name pp2lp)
 (public_name pp2lp)
 (libraries unix)
 (modules
   parser lexer parse_pp syntax_pp
   rule_db proof_tree proof_tree_cmd pp_lp free_vars subst hyp_ctx rule_args
   ins result
   emit_lp emit_pp reconstruct gen_but
   json_out suite lp_diag cache coverage runner lp_tools
   repl_data
 )
)
